Container overflow fix

--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,6 @@ nav ul li a:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
 }
 
 
